--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
-language: sql
+language: java
 services:
   - mysql
 before_install:
   - mysql -u root --password="" < testing_files/mysql_datatypes_test.sql
+  
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
+      - mysql-client
