--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: java
+
 services:
   - mysql
+  - postgresql
+
 before_install:
   - mysql -u root --password="" < testing_files/mysql_datatypes_test.sql
+
+before_script:
+  - psql -U postgres -d postgres -a -f ./testing_files/postgres_datatypes_test.sql
   
 addons:
   apt:
