--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,8 @@
-language: java
+language: generic
+
+sudo: required
 
 services:
-  - mysql
-  - postgresql
+  - docker
 
-before_install:
-  - mysql -u root --password="" < testing_files/mysql_datatypes_test.sql
-
-before_script:
-  - psql -U postgres -d postgres -a -f ./testing_files/postgres_datatypes_test.sql
-  
-addons:
-  apt:
-    sources:
-      - mysql-5.7-trusty
-    packages:
-      - mysql-server
-      - mysql-client
-      
-  postgresql: "9.4"
+script: ./testing_files/test_mysql.sh
