--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,8 @@ sudo: required
 
 services:
   - docker
+  
+before_install:
+  - chmod +x testing_files/test_mysql.sh
 
 script: ./testing_files/test_mysql.sh
