--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
     - docker logs -f exasoldb &
 
     # Wait until database is ready
-    - (docker logs -f --tail 0 exasoldb &) 2>&1 | grep -q -i 'stage4: All stages finished'
+    - (docker logs -f --tail 0 exasoldb &) 2>&1 | grep -q -i "stage4: All stages finished"
     - sleep 30
     - chmod +x testing_files/mock_test.sh
     
