--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ env:
 before_install:
     
     #cloning the python-exasol package repository
-    git clone --depth=50 --branch=master https://github.com/EXASOL/python-exasol.git
+    - git clone --depth=50 --branch=master https://github.com/EXASOL/python-exasol.git
 
     #setting up an exasol db image in docker
     - docker pull exasol/docker-db:latest
