test travis python

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_install:
     
     #cloning the python-exasol package repository
     - git clone --depth=50 --branch=master https://github.com/EXASOL/python-exasol.git
+    - cp -R python-exasol/* .
 
     #setting up an exasol db image in docker
     - docker pull exasol/docker-db:latest
@@ -61,6 +62,6 @@ install:
     - ./$EXAODBC/config_odbc --mode=config --host=$EXAHOST --user=$EXAUSER --password=$EXAPW
     
     # install py sdk
-    - python python-exasol/setup.py install --prefix=$HOME/exa_py
+    - python setup.py install --prefix=$HOME/exa_py
     
 script: ./testing_files/mock_test.sh
