--- a/.travis.yml
+++ b/.travis.yml
@@ -35,15 +35,10 @@ before_install:
     - ./tests/write-odbc-ini-in-home.sh "$TRAVIS_BUILD_DIR/EXASOL_ODBC-6.0.2"
 
     # allow test files to be executed
-    - chmod +x testing_files/exasol_docker.sh
-    - chmod +x testing_files/mock_test.sh
-    - chmod +x testing_files/test_exasol.sh    
-    - chmod +x testing_files/test_mysql.sh
-    - chmod +x testing_files/test_sqlserver.sh
-    - chmod +x testing_files/test_postgres.sh
+    - chmod +x test/testing_files/*
     
     #install exasol image and run container
-    - ./testing_files/exasol_docker.sh
+    - ./test/testing_files/exasol_docker.sh
     
     # get unixODBC
     - wget www.unixodbc.org/unixODBC-2.3.4.tar.gz
@@ -69,8 +64,8 @@ install:
     - python setup.py install --prefix=$HOME/exa_py
     
 script: 
-    - ./testing_files/mock_test.sh
-    - ./testing_files/test_exasol.sh
-    - ./testing_files/test_mysql.sh
-    - ./testing_files/test_sqlserver.sh
-    - ./testing_files/test_postgres.sh
+    - ./test/testing_files/mock_test.sh
+    - ./test/testing_files/test_exasol.sh
+    - ./test/testing_files/test_mysql.sh
+    - ./test/testing_files/test_sqlserver.sh
+    - ./test/testing_files/test_postgres.sh
