--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ env:
 
 before_install:
     
-    - cat testEncrypt
+    - cat $testEncrypt
     
     #cloning the python-exasol package repository
     - git clone --depth=50 --branch=master https://github.com/EXASOL/python-exasol.git
