--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
 - cp -R python-exasol/* .
 - ./tests/write-odbc-ini-in-home.sh "$TRAVIS_BUILD_DIR/EXASOL_ODBC-6.0.2"
 - chmod +x test/testing_files/*
-- "./test/testing_files/exasol_docker.sh"
+- "source ./test/testing_files/exasol_docker.sh"
 - echo $EXAPLUS_PATH
 - wget www.unixodbc.org/unixODBC-2.3.4.tar.gz
 - wget $EXAODBC_URL$EXAODBC".tar.gz"
